css/style.css
:root {
  --black-basic: #000;
  --black-almost: #363636;

  --white: #fff;

  --grey-basic: #7e7e7e;
  --grey-dark: #464646;
  --grey-light: #e5e5e5;
  --grey-back: #ebebeb;
  --grey-form-back: #f2f2f2;
  --grey-form-back-hover: #eaeaea;
  --grey-page-hover: #d9d9d9;

  --yellow: #f7e296;
  --orange: #f0c52e;
  --green: #91c92f;
  --pink: #f6dada;

  --font-open-sans: "Open-Sans", Arial, sans-serif;
  --font-gilroy: "Gilroy", Arial, sans-serif;

  --transition-duration: 0.6s;
}

@font-face {
  font-family: "Gilroy";
  src: url("../fonts/gilroy-extrabold.woff2") format("woff2"),
  url("../fonts/gilroy-light.woff2") format("woff2"),
  url("../fonts/gilroy-extrabold.woff") format("woff"),
  url("../fonts/gilroy-light.woff") format("woff");
}

body {
  margin: 0;
  padding: 0;
  min-width: 1160px;
  font-family: var(--font-open-sans);
  font-size: 15px;
  line-height: 28px;
}

a {
  text-decoration: none;
  color: var(--black-basic);
}

.container {
  margin: 0 auto;
  width: 1200px;
  padding: 0 20px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.main-body ul {
  list-style: none;
}

.main-body ul,
.main-body p,
.main-body h1,
.main-body h2,
.main-body h3 {
  padding: 0;
  margin: 0;
}

.main-header {
  background-image: linear-gradient(var(--white) 20px, var(--yellow) 20px);
}

.header-upper-row {
  font-weight: 300;
  font-size: 15px;
  line-height: 20px;
}

.header-main-nav {
  font-weight: 800;
  font-size: 18px;
  line-height: 22px;
  font-family: var(--font-gilroy);
  text-transform: uppercase;
}

.submenu {
  font-weight: 300;
  font-size: 15px;
  line-height: 20px;
  font-family: var(--font-open-sans);
  text-transform: none;
  letter-spacing: normal;
}

.slider {
  font-family: var(--font-gilroy);
  background-image: linear-gradient(var(--yellow) 146px, var(--white) 146px);
}

.service-section {
  background-image: linear-gradient(var(--white) 115px, var(--grey-light) 115px);
}

.slider .description,
.footer-address-section,
.footer-user-section {
  font-family: var(--font-open-sans);
  font-weight: 300;
  font-size: 15px;
  line-height: 20px;
}

.slider h3 {
  font-weight: 800;
  font-size: 47px;
  line-height: 58px;
}

.slider .property-value {
  font-weight: 300;
  font-size: 36px;
  line-height: 42px;
}

.slider .property-description {
  font-weight: 300;
  font-size: 13px;
  line-height: 15px;
}

.button_interactive {
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  position: relative;
  min-width: 160px;
  background-color: transparent;
  border: none;
}

.button_interactive::before {
  position: absolute;
  content: "";
  width: 100%;
  height: 8px;
  background-color: var(--orange);
  z-index: -1;
  transition-duration: var(--transition-duration);
}

.button_interactive:hover::before {
  height: 100%;
}

.button_interactive:active {
  color: rgba(0, 0, 0, 0.3);
  outline: none;
}

.service-section .button_interactive {
  width: 160px;
}

.service-section .button_interactive:active {
  color: var(--yellow);
  width: 280px;
  background-color: var(--black-basic);
  transition-duration: var(--transition-duration);
}

.service-section .button_interactive:active::before {
  display: none;
}

.product-type-section,
.service-section a,
.button_interactive,
.footer-nav,
.popup-feedback label,
.catalog-section a {
  font-family: var(--font-gilroy);
  font-weight: 800;
  font-size: 18px;
  line-height: 22px;
}

.service-section h3,
.about-us-section h2,
.contact-section h2,
.main h1 {
  font-family: var(--font-gilroy);
  font-weight: 800;
  font-size: 47px;
  line-height: 58px;
}

.service-section p,
.about-us-section p,
.contact-section p {
  font-family: var(--font-open-sans);
  font-weight: 300;
  font-size: 15px;
  line-height: 28px;
}

.service-list {
  font-family: var(--font-gilroy);
  font-weight: 800;
  font-size: 16px;
  line-height: 28px;
}

.popup-feedback input,
.popup-feedback textarea,
.breadcrumbs,
.form-filter label,
.sort-section-link-list {
  font-weight: normal;
  font-size: 14px;
  line-height: 19px;
}

.link-exit,
.breadcrumbs a {
  opacity: 0.3;
}

.main h2,
.sort-section h3,
.pages-section {
  font-family: var(--font-gilroy);
  font-weight: 800;
  font-size: 16px;
  line-height: 20px;
  text-transform: uppercase;
}

.form-filter legend {
  font-family: var(--font-gilroy);
  font-weight: 800;
  font-size: 14px;
  line-height: 17px;
}

.form-filter label {
  font-weight: 300;
}

.price {
  font-family: var(--font-gilroy);
  font-weight: 300;
  font-size: 16px;
  line-height: 18px;
}

.button-add-to-compare {
  font-weight: 300;
  font-size: 13px;
  line-height: 18px;
}

.pages-section {
  background-color: var(--grey-back);
}

.footer-user-section span,
.footer-user-section a {
  opacity: 0.7;
}

.main-footer {
  color: var(--white);
  background-color: var(--black-almost);
}

.footer-nav a {
  color: inherit;
  text-transform: uppercase;
}

.footer-nav a,
.contact-section h2,
.about-us-section h2,
.button_interactive,
.service-section h3,
.header-main-nav {
  letter-spacing: 0.2em;
}

.catalog-link {
  letter-spacing: 0.1em;
}

.footer-user-section a {
  color: inherit;
}

.main-header a:hover,
.main-footer a:hover {
  opacity: 0.6;
}

.footer-user-section a:hover {
  opacity: 1;
}

.main-header a:active,
.main-footer a:active {
  opacity: 0.3;
}

.search-form__input {
  background-color: var(--yellow);
  border: none;
  outline: none;
}

.search-form__input::placeholder {
  color: var(--black-basic);
  opacity: 0.3;
}

.search-form__input:hover::placeholder {
  opacity: 0.6;
}

.search-form__input:focus::placeholder {
  opacity: 1;
}

.search-form__button {
  background-color: var(--yellow);
  border: 2px solid var(--black-almost);
  font-weight: 300;
  font-size: 15px;
  line-height: 20px;
  display: none;
  text-transform: uppercase;
  justify-content: center;
  align-items: center;
  transition-duration: var(--transition-duration);
}

.logo {
  transition-duration: var(--transition-duration);
}

.search-form__input:focus + .search-form__button {
  display: flex;
}

.search-form__button:hover {
  color: var(--white);
  background-color: var(--black-basic);
}

.search-form__button:active {
  display: flex;
  color: rgba(255, 255, 255, 0.3);
}

.slider__slider-2,
.slider__slider-3,
.service-slider__warranty,
.service-slider__credit {
  display: none;
}

.product-type {
  padding-top: 210px;
  position: relative;
  display: flex;
  flex-direction: column;
}

.product-type::before {
  position: absolute;
  content: "";
  width: 157px;
  height: 160px;
  background-color: var(--yellow);
  top: 0;
  transition-duration: var(--transition-duration);
}

.product-type:hover::before {
  background-color: var(--orange);
  z-index: 1;
}

.product-type::after {
  position: absolute;
  content: "";
  background-image: url("../img/product-type-reality.png");
  background-repeat: no-repeat;
  background-position: center;
  z-index: 2;
  top: 0;
  width: 160px;
  height: 160px;
  transition-duration: var(--transition-duration);
}

.product-type__virtual-reality {
  width: 157px;
}

.product-type__monopod::after {
  background-image: url("../img/product-type-monopod.png");
}

.product-type__action-camera::after {
  background-image: url("../img/product-type-action-camera.png");
}

.product-type__fintess-tracker::after {
  background-image: url("../img/product-type-fitness-bracket.png");
}

.product-type__smart-watch::after {
  background-image: url("../img/product-type-smart-watch.png");
}

.product-type__quodrohelicopter::after {
  background-image: url("../img/product-type-quadrohelicopter.png");
}

.product-type:active::after {
  opacity: 0.3;
}

.popup-feedback input,
.popup-feedback textarea {
  background-color: var(--grey-form-back);
  color: rgba(0, 0, 0, 0.4);
  border: 2px solid transparent;
}

.popup-feedback input:hover,
.popup-feedback textarea:hover {
  background-color: var(--grey-form-back-hover);
}

.popup-feedback input:focus,
.popup-feedback textarea:focus {
  background-color: var(--white);
  color: var(--black-basic);
  border: 2px solid var(--yellow);
  outline: none;
}

.partner-list img {
  filter: grayscale(1);
  transition-duration: var(--transition-duration);
}

.partner-list img:hover {
  filter: none;
}

.sort-section-link-list a,
.pages-section__number {
  opacity: 0.3;
}

.breadcrumbs a:hover,
.sort-section-link-list a:hover,
.pages-section__number:hover {
  opacity: 0.6;
}

.sort-section .sort-link_active,
.sort-section-link-list a:active,
.pages-section__number:active,
.pages-section__number_active {
  opacity: 1;
}

.breadcrumbs a:active {
  opacity: 0.1;
}

.pages-section__word:hover {
  background-color: var(--grey-page-hover);
}

.pages-section__word:active {
  color: rgba(0, 0, 0, 0.3);
}

.pages-section a {
  display: block;
  padding: 10px 15px;
}

.product {
  position: relative;
}

.product-hover-div {
  position: absolute;
  top: 200px;
  left: 100px;
  opacity: 0;
  transition-duration: var(--transition-duration);
}

.product:hover .product-hover-div {
  opacity: 1;
  transition-delay: 0.3s;
}

.product:hover img {
  opacity: 0.7;
  transition-duration: var(--transition-duration);
}

.popup-map,
.popup-feedback {
  display: none;
}

a[href^="tel:"]:hover {
  opacity: 0.7;
}

a[href^="tel:"]:active {
  opacity: 0.7;
}

.social-icon-list a {
  opacity: 0.3;
}

.social-icon-list a:hover {
  opacity: 0.6;
}

.social-icon-list a:active {
  opacity: 0.1;
}

.footer-user-section .link-academy {
  opacity: 1;
}

.footer-user-section .link-academy:hover {
  opacity: 0.6;
}

.footer-user-section .link-academy:active {
  opacity: 0.3;
}

.button-add-to-compare {
  background-color: transparent;
  border: none;
  opacity: 0.5;
}

.button-add-to-compare:hover {
  opacity: 1;
}

.button-add-to-compare:active {
  opacity: 0.2;
  outline: none;
}

.sort-section-icon-list a {
  opacity: 0.2;
}

.sort-section-icon-list a:hover {
  opacity: 0.4;
}

.sort-section-icon-list a:active {
  opacity: 1;
}

/*TODO Don't move it*/
*, *::before, *::after {
  box-sizing: border-box;
}

